Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: qr
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: qr
  template:
    metadata: 
      labels: 
        app: qr
    spec:
      containers:
      - name: qr
        image: prajnab9/qr
        ports:
        -  containerPort: 5000
