Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: qr
  type: NodePort
  ports: 
  - targetPort: 5000
    port: 5000
    nodePort: 31000
