ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "qr.com"
      http:
        paths:
          - pathType: Prefix
            path: "/home"
            backend:
              service: 
                name: my-service
                port:
                  number: 5000
